[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fcdex-3-0"
version = "1.0.0"
description = "FCDex 3.0 — tournaments, battles, achievements, and merging for BallsDex V3"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "arielaram" },
  { name = "fcdex" },
]
requires-python = ">=3.12"
readme = "README.md"
dependencies = [
  "ballsdex>=3.0.0",
]

[project.urls]
Repository = "https://github.com/TheFCProject/FCDex-3.0"
Documentation = "https://github.com/TheFCProject/FCDex-3.0#readme"
Issues = "https://github.com/TheFCProject/FCDex-3.0/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["fcdex_3_0*"]
