[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fcdex-3-1"
version = "2.5.2"
description = "FCDex 3.1 — packs, craft/SBC, battles, tournaments, quests, shop, and more for BallsDex V3"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "arielaram" },
  { name = "fcdex" },
]
requires-python = ">=3.12"
readme = "README.md"
dependencies = []

[project.urls]
Repository = "https://github.com/ariel-aram/FCDex-3.1"
Documentation = "https://github.com/ariel-aram/FCDex-3.1#readme"
Issues = "https://github.com/ariel-aram/FCDex-3.1/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["fcdex_3_1*"]

[tool.setuptools.package-data]
fcdex_3_1 = ["media/*", "extra.toml", "media/merge_cards.toml"]

[project.optional-dependencies]
dev = [
  "ruff>=0.14.1",
  "pyright>=1.1.406",
  "django>=6.0",
  "django-types",
  "pytest>=8.0",
  "discord.py>=2.4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py312"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = true
line-ending = "lf"
docstring-code-format = true

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E203"]

[tool.ruff.lint.isort]
known-first-party = ["fcdex_3_1", "ballsdex", "bd_models", "settings"]
split-on-trailing-comma = false

[tool.pyright]
extraPaths = [".", ".vendor/ballsdex/admin_panel", ".vendor/ballsdex"]
pythonVersion = "3.12"
reportIncompatibleMethodOverride = "warning"
reportIncompatibleVariableOverride = "warning"
venvPath = "."
venv = ".venv"
typeCheckingMode = "basic"
exclude = ["tests"]

[[tool.pyright.executionEnvironments]]
root = "fcdex_3_1/fcdex_ext"
extraPaths = [".", ".vendor/ballsdex/admin_panel", ".vendor/ballsdex"]
reportAttributeAccessIssue = false
reportInvalidTypeForm = false
